1998-07-30  Martin Baulig  <martin@home-of-linux.org>

	* error.c: Making weak alias `__error' and `__error_at_line'
	only if `_LIBC' is defined and not if we only
	HAVE_PROGRAM_INVOCATION_NAME.

	* gnomesupport-fake.h: Include gnome-argp.h to get
	`program_invocation_name'.

1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-fake.h: New file.  Fake in HAVE_* for functions
	that are provided by `gnomesupport' rather than `libc'.
	* error.c: Include gnomesupport-fake.h.
	(program_name): Define to `program_invocation_name' if 
	HAVE_PROGRAM_INVOCATION_NAME.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* error.c, error.h: New files.  Imported from glibc.

	* Makefile.am (supportinclude_HEADERS): Added `error.h'.

1998-07-17  Martin Baulig  <martin@home-of-linux.org>

	* strtol.c, strtoul.c (<ansidecl.h>): Removed. Using
	`const' instead of `CONST'.

1998-07-15  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport.awk (gethostname): Emit declaration.

1998-07-15  Martin Baulig  <baulig@Stud.Informatik.uni-trier.de>

	* gnomesupport.awk (memmove strtod strtol strtoul): Emit
	declarations.

	* memmove.c: New file.  Imported from GNU libiberty.

	* strtod.c, strtol.c, strtoul.c: New files. Imported from
	GNU libiberty.

1998-07-14  Raja R Harinath  <harinath@cs.umn.edu>

	* mkstemp.c (<stdint.h>): Systems that don't have `mkstemp'
	probably don't have <stdint.h> either.  Will fix it with a proper
	autoconf test later.

1998-07-13  Raja R Harinath  <harinath@cs.umn.edu>

	* argp.h (ARGP_EI): Define to `extern __inline__', rather that
	`extern inline'.  Since this code is inside an __OPTIMIZE__ check,
	I assume this is GCC, and __inline__ will work.

	* mkstemp.c: New file.
	* gnomesupport.awk: Conditionally emit prototype for `mkstemp'.

Tue Jul  7 00:02:51 1998  Tom Tromey  <tromey@cygnus.com>

	* argp-help.c: Don't include <malloc.h>.

1998-06-11  Raja R Harinath  <harinath@cs.umn.edu>
